# test-poetry-scikit-build

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml
hello/: __init__.py  __main__.py  _hello.cxx
